@@ -1820,14 +1820,10 @@ void shovechars(int nPorts, PortInfo aPorts[])
         //
         if (!IS_INVALID_SOCKET(stubslave_socket))
         {
-            Pipe_DecodeFrames(CHANNEL_INVALID, &Queue_Out);
-            if (!IS_INVALID_SOCKET(stubslave_socket))
+            FD_SET(stubslave_socket, &input_set);
+            if (0 < Pipe_QueueLength(&Queue_Out))
             {
-                FD_SET(stubslave_socket, &input_set);
-                if (0 < Pipe_QueueLength(&Queue_Out))
-                {
-                    FD_SET(stubslave_socket, &output_set);
-                }
+                FD_SET(stubslave_socket, &output_set);
             }
         }
 #endif // STUB_SLAVE
@@ -1960,6 +1956,8 @@ void shovechars(int nPorts, PortInfo aPorts[])
                     ; // Nothing.
                 }
             }
+
+            Pipe_DecodeFrames(CHANNEL_INVALID, &Queue_Out);
 
             if (!IS_INVALID_SOCKET(stubslave_socket))
             {
