@@ -364,6 +364,9 @@ void cf_init(void)
     {
         mudstate.global_regs[i] = NULL;
     }
+#if defined(STUB_SLAVE)
+    mudstate.ResultsSet = NULL;
+#endif // STUB_SLAVE
     mudstate.nObjEvalNest = 0;
     mudstate.in_loop = 0;
     mudstate.bStackLimitReached = false;
